# autolina-scraper

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PULL_REQUEST_TEMPLATE.md  Pipfile  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  e2e.yml  release.yml
docs/: REFERENCE.md
src/autolina_scraper/: __init__.py  catalog.py  cli.py  detail.py  flatten.py  htmlparse.py  http.py  io.py  models.py  orchestrate.py  search.py
tests/: conftest.py  test_catalog.py  test_cli.py  test_detail.py  test_e2e.py  test_flatten.py  test_htmlparse.py  test_http.py  test_io.py  test_package_api.py  test_scrape.py  test_search.py
tests/fixtures/: detail_new_car.html  detail_private_seller_with_description.html  detail_used_car.html  search_page1.html  search_page2.html
