[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autolina-scraper"
version = "0.3.0"
description = "Free, keyless Python scraper & library for autolina.ch vehicle listings — any make/model, price/mileage/year filters, CLI + library API, MIT licensed."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "danyk20" }]
requires-python = ">=3.11"
keywords = ["autolina", "scraper", "web-scraping", "switzerland", "car-marketplace", "vehicle-data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.31",
    "selectolax>=0.3.21",
]

[project.urls]
Homepage = "https://github.com/danyk20/autolina-scraper"
Repository = "https://github.com/danyk20/autolina-scraper"
Issues = "https://github.com/danyk20/autolina-scraper/issues"
Changelog = "https://github.com/danyk20/autolina-scraper/blob/master/CHANGELOG.md"
Documentation = "https://github.com/danyk20/autolina-scraper/blob/master/docs/REFERENCE.md"

[project.scripts]
autolina-scraper = "autolina_scraper.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "mypy>=1.10",
    "ruff>=0.6",
    "types-requests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/autolina_scraper"]

[tool.pytest.ini_options]
addopts = "-m \"not e2e\" --cov=autolina_scraper --cov-report=term-missing --cov-fail-under=95"
markers = ["e2e: hits the real live site, excluded by default"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/autolina_scraper"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["autolina_scraper"]
mypy_path = "src"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
